# primitive

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-web.sh  build.rs  package-lock.json  package.json
.github/workflows/: pages.yml  test.yml
config/: graph.toml
shaders/: mandelbrot.frag  mandelbrot.vert
src/: hud.rs  lib.rs  main.rs  render_graph.rs
tests/: cross_platform.mjs  headless.rs  responsive.mjs  screenshot.mjs
tools/: dev-serve.mjs
web/: index.html
