[package]
name = "wgpuweb"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "24", features = ["glsl"] }
winit = "0.30"
log = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
web-time = "1"
raw-window-handle = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24", features = ["glsl", "webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
